+index with new yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ exclude:
   - "labs/"
   - "discussion/"
   - "slides/"
-  - "**/*.ipynb"   # Exclude all Jupyter Notebooks
-  - "**/*.Rmd"     # Exclude R Markdown files
+  - "**/*.ipynb"
+  - "**/*.Rmd"
+  - "**/*.json"  # If any stray JSON files are corrupt
