move week 1 discussion to lab-section repo

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,10 +10,10 @@ website:
         text: Home
       # - href: sections.qmd
       #   text: Sections
-      - text: Sections
+      - text: Discussion
         menu:
           - text: week 0
-            href: sections/week0.qmd
+            href: discussion/week0.qmd
       - icon: github
         href: https://github.com/MaRo406/eds-232-machine-learning
         target: _blank
