--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
       - text: Discussion
         menu:
           - text: week 0
-            href: discussion/week0.qmd
+            href: sections/week0.qmd
       - icon: github
         href: https://github.com/MaRo406/eds-232-machine-learning
         target: _blank
