add week 1 discussion to website

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         menu:
           - text: week 0
             href: discussion/week0.qmd
+          - text: week 1
+            href: discussion/week1.qmd
       - icon: github
         href: https://github.com/MaRo406/eds-232-machine-learning
         target: _blank
