--- a/eds232_env.yml
+++ b/eds232_env.yml
@@ -1,25 +1,30 @@
 name: ml-env
 channels:
-- conda-forge
-- defaults
+  - conda-forge
+  - defaults
 dependencies:
-- pandas=2.2.3
-- numpy=2.0.2
-- matplotlib=3.9.4
-- scikit-learn=1.6.0
-- xgboost=2.1.3
-- keras=3.7.0
-- kagglehub=0.3.5
-- seaborn=0.11.2
-- ipython=8.18.1
-- ipywidgets=8.1.5
-- statsmodels=0.14.4
-- ipykernel=6.29.5
-- scipy=1.13.1
-- librosa=0.10.2.post1
-# - pip=24.3.1
-- pip:
-    - mglearn==0.2.0
-    - tensorflow==2.11.0 
-    - islp==0.4.0
-    - torch==1.13.0 
+  - python=3.10  
+  - pandas=2.1.4
+  - numpy=1.24.3
+  - matplotlib=3.8.0
+  - scikit-learn=1.3.2
+  - xgboost=2.0.3
+  - keras=2.15.0
+  - kagglehub=0.3.5
+  - seaborn=0.13.0
+  - ipython=8.18.1
+  - ipywidgets=8.1.1
+  - statsmodels=0.14.1
+  - ipykernel=6.29.3  
+  - scipy=1.11.4
+  - librosa=0.10.1
+  - conda-forge::otter-grader=6.0.4
+  - conda-forge::ucimlrepo=0.0.7
+  - openpyxl=3.1.2
+  - spotipy=2.23.0
+  - pip:
+      - mglearn==0.2.0
+      - tensorflow==2.15.0
+      - islp==0.4.0
+      - torch==2.1.2
+    
