update yml and remove discussion 1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,15 +11,10 @@ website:
     right:
       - href: index.qmd
         text: Home
-      # - href: sections.qmd
-      #   text: Sections
       - text: Discussion
         menu:
-       #   - text: week 0
-        #    href: discussion/week0.qmd
-          - text: week 1
-            href: discussion/week1.qmd
-
+          - text: week 0
+            href: discussion/week0.qmd
       - text: Weekly Labs
         menu:
           - text: Lab Rubric
@@ -36,7 +31,7 @@ website:
 
 format:
   html:
-    theme: docs/meds-website-styles.css
+    theme: meds-website-styles.css
     toc: true
     toc-location: left
     title-block-banner: true
