--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         menu:
           - text: week 0
             href: discussion/week0.qmd
+          - text: week 1
+            href: discussion/week1.qmd
       - text: Weekly Labs
         menu:
           - text: Lab Rubric
