--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,10 +13,10 @@ website:
         text: Home
       - text: Discussion
         menu:
-          - text: week 0
-            href: discussion/week0.qmd
-          - text: week 1
+          - text: Week 1
             href: discussion/week1.qmd
+          - text: Week 2 
+            href: discussion/week2.qmd
       - text: Weekly Labs
         menu:
           - text: Lab Rubric
@@ -33,7 +33,7 @@ website:
 
 format:
   html:
-    theme: meds-website-styles.css
+    theme: meds-website-styles.scss
     toc: true
     toc-location: left
     title-block-banner: true
