--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
             href: discussion/week1.qmd
           - text: Week 2 
             href: discussion/week2.qmd
+          - text: Week 3
+            href: discussion/week3.qmd
       - text: Weekly Labs
         menu:
           - text: Lab Rubric
