Change kernel for old labs, add discussion 9

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ website:
             href: discussion/week7.qmd
           - text: Week 8
             href: discussion/week8.qmd
+          - text: Week 9
+            href: discussion/week9.qmd
             
             
       - text: Weekly Labs
